minor bug fixes

--- a/web/frontendkatharina/views/forecastfixedcosts.html
+++ b/web/frontendkatharina/views/forecastfixedcosts.html
@@ -187,8 +187,8 @@
                         <input class="form-control" type="number" id="valAdjustInventories" name="val_adjust_inventories"/><br />
                         <label for="otherFixCost">OTHER_FIX_COST:</label>
                         <input class="form-control" type="number" id="otherFixCost" name="other_fix_cost"/><br />
-                        <label for="deprecation">DEPRECATION:</label>
-                        <input class="form-control" type="number" id="deprecation" name="deprecation"/><br />
+                        <label for="depreciation">DEPRECIATION:</label>
+                        <input class="form-control" type="number" id="depreciation" name="deprecation"/><br />
                         <label for="capCost">CAP_COST:</label>
                         <input class="form-control" type="number" id="capCost" name="cap_cost"/><br />
                         <label for="equityIncome">EQUITY_INCOME:</label>
