--- a/web/frontendkatharina/views/insertfixedcosts.html
+++ b/web/frontendkatharina/views/insertfixedcosts.html
@@ -249,7 +249,7 @@
         <div class="form-group row">
             <label for="planPeriod" class="col-xs-4 col-form-label">PLAN_PERIOD:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="text" id="planPeriod" name="plan_period"/><br />
+                <input class="form-control" type="number" id="planPeriod" name="plan_period"/><br />
             </div>
         </div>
         <div class="form-group row">
