added success and fail alert message for POST

--- a/web/frontendkatharina/views/forecastsales.html
+++ b/web/frontendkatharina/views/forecastsales.html
@@ -121,10 +121,10 @@
                 <div class="from-group">
 
 
-                    <form class="sales" action="http://localhost:8080/fourschlag/api/TEST/sales/" method="post">
+                    <form id="salesForm" class="sales" action="http://localhost:8080/fourschlag/api/TEST/sales/" method="post">
 
                         <label for="period">PERIOD:</label>
-                        <input class="form-control" type="text" id="period" readonly name="period" /><br />
+                        <input class="form-control" type="number" id="period" readonly name="period" /><br />
                         <label for="region">REGION:</label>
                         <input class="form-control" type="text" id="region" readonly name="region" /><br />
                         <label for="currency">CURRENCY</label>
@@ -150,7 +150,7 @@
                         <label for="topdownCm1">TOPDOWN_ADJUST_CM1:</label>
                         <input class="form-control" type="number" id="topdownCm1" name="topdown_adjust_cm1"/><br />
                         <label for="planPeriod">PLAN_PERIOD:</label>
-                        <input class="form-control" type="text" id="planPeriod" readonly name="plan_period"/><br />
+                        <input class="form-control" type="number" id="planPeriod" readonly name="plan_period"/><br />
                         <label for="entryType">ENTRY_TYPE:</label>
                         <input class="form-control" type="text" id="entryType" readonly name="entry_type"/><br />
                         <label for="status">STATUS:</label>
