--- a/web/frontendkatharina/css/main.css
+++ b/web/frontendkatharina/css/main.css
@@ -1,4 +1,8 @@
-#form{
+#salesForm{
+    padding: 10px;
+}
+
+#fixedcostsForm{
     padding: 10px;
 }
 #divforform{
@@ -12,6 +16,6 @@
     margin-left: 4%;
 }
 
-#buttons{
-
-}
+/*input:required:hover {
+    border-color: rgba(200, 0, 0, 0.85);
+}*/
