--- a/web/frontendkatharina/views/forecastfixedcosts.html
+++ b/web/frontendkatharina/views/forecastfixedcosts.html
@@ -137,10 +137,10 @@
                 <div class="from-group">
 
 
-                    <form class="fixedcosts" action="http://localhost:8080/fourschlag/api/TEST/fixedcosts/" method="post">
+                    <form id="fixedcostsForm" class="fixedcosts" action="http://localhost:8080/fourschlag/api/TEST/fixedcosts/" method="post">
 
                         <label for="period">PERIOD:</label>
-                        <input class="form-control" type="text" id="period" readonly name="period" /><br />
+                        <input class="form-control" type="number" id="period" readonly name="period" /><br />
                         <label for="region">REGION:</label>
                         <input class="form-control" type="text" id="region" readonly name="region" /><br />
                         <label for="currency">CURRENCY</label>
@@ -196,7 +196,7 @@
                         <label for="topdownAdjustFixCosts">TOPDOWN_ADJUST_FIXCOSTS:</label>
                         <input class="form-control" type="number" id="topdownAdjustFixCosts" name="topdown_adjust_fix_costs"/><br />
                         <label for="planPeriod">PLAN_PERIOD:</label>
-                        <input class="form-control" type="text" id="planPeriod" readonly name="plan_period"/><br />
+                        <input class="form-control" type="number" id="planPeriod" readonly name="plan_period"/><br />
                         <label for="entryType">ENTRY_TYPE:</label>
                         <input class="form-control" type="text" id="entryType" readonly name="entry_type"/><br />
                         <label for="status">STATUS:</label>
