--- a/web/frontendkatharina/views/insertfixedcosts.html
+++ b/web/frontendkatharina/views/insertfixedcosts.html
@@ -76,186 +76,186 @@
 
 <div id ='divforform'>
 
-    <form id="form" action="http://localhost:8080/fourschlag/api/TEST/fixedcosts/" method="post">
+    <form id="fixedcostsForm" action="http://localhost:8080/fourschlag/api/TEST/fixedcosts/" method="post">
 
         <div class="form-group row">
             <label for="period" class="col-xs-4 col-form-label">PERIOD:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="period" name="period"/><br/>
+                <input class="form-control" type="number" id="period" name="period" required/><br/>
             </div>
         </div>
         <div class="form-group row">
             <label for="region" class="col-xs-4 col-form-label">REGION:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="region" name="region"/><br />
+                <input class="form-control" type="text" id="region" name="region" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="currency" class="col-xs-4 col-form-label">CURRENCY:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="currency" name="currency"/><br />
+                <input class="form-control" type="text" id="currency" name="currency" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="userid" class="col-xs-4 col-form-label">USERID:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="userid" value="browser" name="user_id"/><br />
+                <input class="form-control" type="text" id="userid" value="browser" name="user_id" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="entryts" class="col-xs-4 col-form-label">ENTRY_TS:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="datetime-local" id="entryts" value="2016-04-12T23:20:50.52" name="entry_ts"/><br />
+                <input class="form-control" type="datetime-local" id="entryts" value="2016-04-12T23:20:50.52" name="entry_ts" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="sbu" class="col-xs-4 col-form-label">SBU:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="sbu" name="sbu"/><br />
+                <input class="form-control" type="text" id="sbu" name="sbu" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="subRegion" class="col-xs-4 col-form-label">SUBREGION:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="subRegion" name="subregion"/><br />
+                <input class="form-control" type="text" id="subRegion" name="subregion" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="fixPreManCost" class="col-xs-4 col-form-label">FIX_PRE_MAN_COST:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="fixPreManCost" name="fix_pre_man_cost"/><br />
+                <input class="form-control" type="number" id="fixPreManCost" name="fix_pre_man_cost" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="shipCost" class="col-xs-4 col-form-label">SHIP_COST:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="shipCost" name="ship_cost" /><br />
+                <input class="form-control" type="number" id="shipCost" name="ship_cost" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="sellCost" class="col-xs-4 col-form-label">SELL_COST:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="sellCost" name="sell_cost"/><br />
+                <input class="form-control" type="number" id="sellCost" name="sell_cost" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="diffActPreManCost" class="col-xs-4 col-form-label">DIFF_ACT_PRE_MAN_COST</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="diffActPreManCost" name="diff_act_pre_man_cost" /><br />
+                <input class="form-control" type="number" id="diffActPreManCost" name="diff_act_pre_man_cost" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="idleEquipCost" class="col-xs-4 col-form-label">IDLE_EQUIP_COST:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="idleEquipCost" name="idle_equip_cost" /><br />
+                <input class="form-control" type="number" id="idleEquipCost" name="idle_equip_cost" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="rdCost" class="col-xs-4 col-form-label">RD_COST:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="rdCost" name="rd_cost" /><br />
+                <input class="form-control" type="number" id="rdCost" name="rd_cost" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="adminCostBu" class="col-xs-4 col-form-label">ADMIN_COST_BU:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="adminCostBu" name="admin_cost_bu" /><br />
+                <input class="form-control" type="number" id="adminCostBu" name="admin_cost_bu" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="adminCostOd" class="col-xs-4 col-form-label">ADMIN_COST_OD:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="adminCostOd" name="admin_cost_od" /><br />
+                <input class="form-control" type="number" id="adminCostOd" name="admin_cost_od" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="adminCostCompany" class="col-xs-4 col-form-label">ADMIN_COST_COMPANY:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="adminCostCompany" name="admin_cost_company" /><br />
+                <input class="form-control" type="number" id="adminCostCompany" name="admin_cost_company" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="otherOpCostBu" class="col-xs-4 col-form-label">OTHER_OP_COST_BU:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="otherOpCostBu" name="other_op_cost_bu" /><br />
+                <input class="form-control" type="number" id="otherOpCostBu" name="other_op_cost_bu" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="otherOpCostOd" class="col-xs-4 col-form-label">OTHER_OP_COST_OD:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="otherOpCostOd" name="other_op_cost_od" /><br />
+                <input class="form-control" type="number" id="otherOpCostOd" name="other_op_cost_od" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="otherOpCostCompany" class="col-xs-4 col-form-label">OTHER_OP_COST_COMPANY:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="otherOpCostCompany" name="other_op_cost_company" /><br />
+                <input class="form-control" type="number" id="otherOpCostCompany" name="other_op_cost_company" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="specItems" class="col-xs-4 col-form-label">SPEC_ITEMS:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="specItems" name="spec_items" /><br />
+                <input class="form-control" type="number" id="specItems" name="spec_items" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="provisions" class="col-xs-4 col-form-label">PROVISIONS:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="provisions" name="provisions" /><br />
+                <input class="form-control" type="number" id="provisions" name="provisions" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="currencyGains" class="col-xs-4 col-form-label">CURRENCY_GAINS:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="currencyGains" name="currency_gains" /><br />
+                <input class="form-control" type="number" id="currencyGains" name="currency_gains" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="valAdjustInventories" class="col-xs-4 col-form-label">VAL_ADJUST_INVENTORIES:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="valAdjustInventories" name="val_adjust_inventories" /><br />
+                <input class="form-control" type="number" id="valAdjustInventories" name="val_adjust_inventories" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="otherFixCost" class="col-xs-4 col-form-label">OTHER_FIX_COST:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="otherFixCost" name="other_fix_cost" /><br />
+                <input class="form-control" type="number" id="otherFixCost" name="other_fix_cost" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="deprecation" class="col-xs-4 col-form-label">DEPRECATION:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="deprecation" name="deprecation" /><br />
+                <input class="form-control" type="number" id="deprecation" name="deprecation" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="capCost" class="col-xs-4 col-form-label">CAP_COST:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="capCost" name="cap_cost" /><br />
+                <input class="form-control" type="number" id="capCost" name="cap_cost" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="equityIncome" class="col-xs-4 col-form-label">EQUITY_INCOME:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="equityIncome" name="equity_income" /><br />
+                <input class="form-control" type="number" id="equityIncome" name="equity_income" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="topdownAdjustFixCosts" class="col-xs-4 col-form-label">TOPDOWN_ADJUST_FIX_COSTS:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="topdownAdjustFixCosts" name="topdown_adjust_fix_costs" /><br />
+                <input class="form-control" type="number" id="topdownAdjustFixCosts" name="topdown_adjust_fix_costs" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="planPeriod" class="col-xs-4 col-form-label">PLAN_PERIOD:</label>
             <div class="col-xs-3">
-                <input class="form-control" type="number" id="planPeriod" name="plan_period"/><br />
+                <input class="form-control" type="number" id="planPeriod" name="plan_period" required/><br />
             </div>
         </div>
         <div class="form-group row">
             <label for="entryType" class="col-xs-4 col-form-label">ENTRY_TYPE:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="entryType" name="entry_type" /><br />
+                <input class="form-control" type="text" id="entryType" name="entry_type" required/><br />
             </div>
         </div>
         <div class="form-group row">
