added reaload if modal is submitted added success and error message some typo fixes

--- a/web/frontendkatharina/views/forecastfixedcosts.html
+++ b/web/frontendkatharina/views/forecastfixedcosts.html
@@ -137,7 +137,7 @@
                 <div class="from-group">
 
 
-                    <form id="fixedcostsForm" class="fixedcosts" action="http://localhost:8080/fourschlag/api/TEST/fixedcosts/" method="post">
+                    <form id="fixedcostsModalForm" class="fixedcosts" action="http://localhost:8080/fourschlag/api/TEST/fixedcosts/" method="post">
 
                         <label for="period">PERIOD:</label>
                         <input class="form-control" type="number" id="period" readonly name="period" /><br />
