--- a/web/frontendkatharina/views/forecastsales.html
+++ b/web/frontendkatharina/views/forecastsales.html
@@ -121,7 +121,7 @@
                 <div class="from-group">
 
 
-                    <form id="salesForm" class="sales" action="http://localhost:8080/fourschlag/api/TEST/sales/" method="post">
+                    <form id="salesModalForm" class="sales" action="http://localhost:8080/fourschlag/api/TEST/sales/" method="post">
 
                         <label for="period">PERIOD:</label>
                         <input class="form-control" type="number" id="period" readonly name="period" /><br />
