--- a/web/frontendkatharina/views/index.html
+++ b/web/frontendkatharina/views/index.html
@@ -78,8 +78,7 @@
                                >Backend</label>
                         <div class="col-lg-8">
                             <input type="text" class="form-control"
-                                   id="backendServer"
-                                   value="141.19.144.62:8080">
+                                   id="backendServer">
                         </div>
                     </div>
                     <div class="form-group">
@@ -95,7 +94,7 @@
                     </div>
                     <div class="form-group">
                         <label class="col-lg-3 control-label"
-                        >Area</label>
+                        >Keyspace</label>
                         <div class="col-lg-8">
                             <select class="form-control" id="keyspace">
                                 <option selected="selected">HUNDRED_THOUSAND</option>
