--- a/web/frontendkatharina/views/insertfixedcosts.html
+++ b/web/frontendkatharina/views/insertfixedcosts.html
@@ -25,6 +25,8 @@
             src="https://code.jquery.com/jquery-1.12.3.js"></script>
     <script type="text/javascript"
             src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.8/validator.min.js"></script>
 
 
 </head>
@@ -76,7 +78,7 @@
 
 <div id ='divforform'>
 
-    <form id="fixedcostsForm" action="http://localhost:8080/fourschlag/api/TEST/fixedcosts/" method="post">
+    <form data-toggle="validator" role="form" id="fixedcostsInsertForm" action="http://localhost:8080/fourschlag/api/TEST/fixedcosts/" method="post">
 
         <div class="form-group row">
             <label for="period" class="col-xs-4 col-form-label">PERIOD:</label>
