--- a/web/frontendkatharina/views/insertfixedcosts.html
+++ b/web/frontendkatharina/views/insertfixedcosts.html
@@ -69,6 +69,37 @@
     </div>
     <!-- /.container -->
 </nav>
+<div id="divformhorizontal">
+    <form class="form-horizontal">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-10 col-md-4">
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label"
+                        >Backend</label>
+                        <div class="col-lg-8">
+                            <input type="text" class="form-control"
+                                   id="backendServer">
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-xs-12 col-md-4">
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label"
+                        >Keyspace</label>
+                        <div class="col-lg-8">
+                            <select class="form-control" id="keyspace">
+
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </form>
+</div>
 
 <div id="überschrift">
     <h3>
@@ -89,7 +120,9 @@
         <div class="form-group row">
             <label for="region" class="col-xs-4 col-form-label">REGION:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="region" name="region" required/><br />
+                <select class="form-control" id="region" name="region" required>
+                    </select>
+                <br />
             </div>
         </div>
         <div class="form-group row">
@@ -113,7 +146,9 @@
         <div class="form-group row">
             <label for="sbu" class="col-xs-4 col-form-label">SBU:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="sbu" name="sbu" required/><br />
+                <select class="form-control" id="sbu" name="sbu" required>
+                    </select>
+                <br />
             </div>
         </div>
         <div class="form-group row">
@@ -257,7 +292,10 @@
         <div class="form-group row">
             <label for="entryType" class="col-xs-4 col-form-label">ENTRY_TYPE:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="entryType" name="entry_type" required/><br />
+                <select class="form-control" id="entryType" name="entry_type" required>
+
+                </select>
+                <br />
             </div>
         </div>
         <div class="form-group row">
