--- a/web/frontendkatharina/views/index.html
+++ b/web/frontendkatharina/views/index.html
@@ -68,6 +68,7 @@
     <!-- /.container -->
 </nav>
 
+<span id="jumbo">
 <div class="jumbotron">
     <form class="form-horizontal">
         <div class="container-fluid">
@@ -162,8 +163,9 @@
     </form>
 
 </div>
-
-<div>
+    </span>
+<span id="indexTable">
+<div class="tablediv">
     <div>
         <table id="KpiTable" class="display" cellspacing="0" width="100%">
             <thead>
@@ -211,7 +213,7 @@
         </table>
     </div>
 </div>
-
+</span>
 <script src="../javascript/main.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 
