--- a/web/frontendkatharina/views/insertsales.html
+++ b/web/frontendkatharina/views/insertsales.html
@@ -82,113 +82,113 @@
     <form  data-toggle="validator" role="form" id="salesInsertForm" action="http://localhost:8080/fourschlag/api/TEST/sales/" method="post">
 
     <div class="form-group row " >
-        <label for="period" class="col-xs-4 col-form-label">PERIOD:</label>
+        <label for="period" class="col-xs-4 col-form-label">Period:</label>
         <div class="col-xs-3">
             <input class="form-control" type="number" id="period" name="period" required/><br/>
         </div>
     </div>
     <div class="form-group row ">
-        <label for="region" class="col-xs-4 col-form-label">REGION:</label>
+        <label for="region" class="col-xs-4 col-form-label">Region:</label>
         <div class="col-xs-5">
             <input class="form-control" type="text" id="region" name="region" required/><br />
         </div>
     </div>
     <div class="form-group row ">
-        <label for="currency" class="col-xs-4 col-form-label">CURRENCY:</label>
+        <label for="currency" class="col-xs-4 col-form-label">Currency:</label>
         <div class="col-xs-5">
             <input class="form-control" type="text" id="currency" name="currency" required/><br />
         </div>
     </div>
     <div class="form-group row ">
-        <label for="userid" class="col-xs-4 col-form-label">USERID:</label>
+        <label for="userid" class="col-xs-4 col-form-label">UserID:</label>
         <div class="col-xs-5">
             <input class="form-control" type="text" id="userid" value="browser" name="userid" required/><br />
         </div>
     </div>
     <div class="form-group row">
-            <label for="entryts" class="col-xs-4 col-form-label">ENTRY_TS:</label>
+            <label for="entryts" class="col-xs-4 col-form-label">Entry Timestamp:</label>
         <div class="col-xs-5">
             <input class="form-control" type="datetime-local" id="entryts" value="2016-04-12T23:20:50.52" name="entry_ts" required/><br />
         </div>
     </div>
     <div class="form-group row">
-        <label for="productMainGroup" class="col-xs-4 col-form-label">PRODUCT_MAIN_GROUP</label>
+        <label for="productMainGroup" class="col-xs-4 col-form-label">Product Main Group</label>
         <div class="col-xs-5">
             <input class="form-control" type="text" id="productMainGroup" name="product_main_group" required/><br />
         </div>
     </div>
     <div class="form-group row">
-        <label for="salesType" class="col-xs-4 col-form-label">SALES_TYPE:</label>
+        <label for="salesType" class="col-xs-4 col-form-label">Sales Type:</label>
         <div class="col-xs-5">
             <input class="form-control" type="text" id="salesType" name="sales_type" required/><br />
         </div>
     </div>
     <div class="form-group row">
-        <label for="salesVolumes" class="col-xs-4 col-form-label">SALES_VOLUMES:</label>
+        <label for="salesVolumes" class="col-xs-4 col-form-label">Sales Volumes:</label>
         <div class="col-xs-3">
             <input class="form-control" type="number" id="salesVolumes" name="sales_volumes" required/><br />
         </div>
     </div>
     <div class="form-group row">
-        <label for="netSales" class="col-xs-4 col-form-label">NET_SALES:</label>
+        <label for="netSales" class="col-xs-4 col-form-label">Net Sales:</label>
         <div class="col-xs-3">
             <input class="form-control" type="number" id="netSales" name="net_sales" required/><br />
         </div>
     </div>
     <div class="form-group row">
-        <label for="cm1" class="col-xs-4 col-form-label">CM1:</label>
+        <label for="cm1" class="col-xs-4 col-form-label">Cm1:</label>
         <div class="col-xs-3">
             <input class="form-control" type="number" id="cm1" name="cm1" required/><br />
         </div>
     </div>
     <div class="form-group row">
-        <label for="topdownSalesVolumes" class="col-xs-4 col-form-label">TOPDOWN_ADJUST_SALES_VOLUMES</label>
+        <label for="topdownSalesVolumes" class="col-xs-4 col-form-label">Topdown Adjust Sales Volumes</label>
         <div class="col-xs-3">
             <input class="form-control" type="number" id="topdownSalesVolumes" name="topdown_adjust_sales_volumes" required/><br />
         </div>
     </div>
     <div class="form-group row">
-        <label for="topdownNetSales" class="col-xs-4 col-form-label">TOPDOWN_ADJUST_NET_SALES:</label>
+        <label for="topdownNetSales" class="col-xs-4 col-form-label">Topdown Adjust Net Sales:</label>
         <div class="col-xs-3">
             <input class="form-control" type="number" id="topdownNetSales" name="topdown_adjust_net_sales" required/><br />
         </div>
     </div>
     <div class="form-group row">
-        <label for="topdownCm1" class="col-xs-4 col-form-label">TOPDOWN_ADJUST_CM1:</label>
+        <label for="topdownCm1" class="col-xs-4 col-form-label">Topdown Adjust Cm1:</label>
         <div class="col-xs-3">
             <input class="form-control" type="number" id="topdownCm1" name="topdown_adjust_cm1" required/><br />
         </div>
     </div>
     <div class="form-group row">
-        <label for="planPeriod" class="col-xs-4 col-form-label">PLAN_PERIOD:</label>
+        <label for="planPeriod" class="col-xs-4 col-form-label">Plan Period:</label>
         <div class="col-xs-3">
             <input class="form-control" type="number" id="planPeriod" name="plan_period" required/><br />
         </div>
     </div>
     <div class="form-group row">
-        <label for="entryType" class="col-xs-4 col-form-label">ENTRY_TYPE:</label>
+        <label for="entryType" class="col-xs-4 col-form-label">Entry Type:</label>
         <div class="col-xs-5">
             <input class="form-control" type="text" id="entryType" name="entry_type" required/><br />
         </div>
     </div>
     <div class="form-group row">
-        <label for="status" class="col-xs-4 col-form-label">STATUS:</label>
+        <label for="status" class="col-xs-4 col-form-label">Status:</label>
         <div class="col-xs-5">
             <input class="form-control" type="text" id="status" name="status" /><br />
         </div>
     </div>
 
     <div class="form-group row">
-        <label for="usercomment" class="col-xs-4 col-form-label">USERCOMMENT:</label>
+        <label for="usercomment" class="col-xs-4 col-form-label">Usercomment:</label>
         <div class="col-xs-5">
             <textarea class="form-control" id="usercomment" rows = '4' name="usercomment"></textarea>
         </div>
+
     </div>
-        <div id = "buttons">
+        <div class="modal-footer">
             <button type="reset" class="btn btn-danger" >Eingaben zurücksetzen</button>
             <button type="submit" value="Submit" class="btn btn-success" >Eingaben absenden</button>
         </div>
-
     </form>
 </div>
 
