--- a/web/frontendkatharina/views/insertfixedcosts.html
+++ b/web/frontendkatharina/views/insertfixedcosts.html
@@ -311,9 +311,14 @@
                 <textarea class="form-control" id="usercomment" rows = '4' name="usercomment"></textarea>
             </div>
         </div>
-        <div id = "buttons">
-            <button type="reset" class="btn btn-danger" >Eingaben zurücksetzen</button>
-            <button type="submit" value="Submit" class="btn btn-success" >Eingaben absenden</button>
+        <div class="form-group row">
+            <div class="modal-footer" id="buttons">
+                <button type="reset" class="btn btn-danger">Eingaben zurücksetzen
+                </button>
+                <button type="submit" value="Submit" class="btn btn-success ">
+                    Eingaben absenden
+                </button>
+            </div>
         </div>
 
     </form>
