--- a/web/frontendkatharina/views/insertsales.html
+++ b/web/frontendkatharina/views/insertsales.html
@@ -252,15 +252,21 @@
                           name="usercomment"></textarea>
             </div>
         </div>
-        <div id="buttons">
-            <button type="reset" class="btn btn-danger">Eingaben zurücksetzen
-            </button>
-            <button type="submit" value="Submit" class="btn btn-success">
-                Eingaben absenden
-            </button>
+        <div class="form-group row">
+            <div class="modal-footer" id="buttons">
+                <button type="reset" class="btn btn-danger">Eingaben zurücksetzen
+                </button>
+                <button type="submit" value="Submit" class="btn btn-success ">
+                    Eingaben absenden
+                </button>
+            </div>
         </div>
 
     </form>
+
+</div>
+<div>
+
 </div>
 
 <script src="../javascript/main.js"></script>
