finished dynamic dropdowns

--- a/web/frontend/views/index.html
+++ b/web/frontend/views/index.html
@@ -28,7 +28,7 @@
 
 
 </head>
-<body>
+<body class="index">
 
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
