--- a/web/frontend/views/insertfixedcosts.html
+++ b/web/frontend/views/insertfixedcosts.html
@@ -30,7 +30,7 @@
 
 
 </head>
-<body>
+<body class="insert">
 
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -128,7 +128,9 @@
         <div class="form-group row">
             <label for="currency" class="col-xs-4 col-form-label">Currency:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="currency" name="currency" required/><br />
+                <select class="form-control" id="currency" name="currency" required>
+                    </select>
+                <br />
             </div>
         </div>
         <div class="form-group row">
@@ -154,7 +156,9 @@
         <div class="form-group row">
             <label for="subRegion" class="col-xs-4 col-form-label">Subregion:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="subRegion" name="subregion" required/><br />
+                <select class="form-control" id="subRegion" name="subregion" required>
+                    </select>
+                <br />
             </div>
         </div>
         <div class="form-group row">
