--- a/web/frontend/views/insertsales.html
+++ b/web/frontend/views/insertsales.html
@@ -30,7 +30,7 @@
 
 
 </head>
-<body>
+<body class="insert">
 
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -137,8 +137,10 @@
             <label for="currency"
                    class="col-xs-4 col-form-label">Currency:</label>
             <div class="col-xs-5">
-                <input class="form-control" type="text" id="currency"
-                       name="currency" required/><br/>
+                <select class="form-control" id="currency"
+                       name="currency" required>
+                    </select>
+                <br/>
             </div>
         </div>
         <div class="form-group row ">
