method for delete

--- a/web/frontend/views/forecastfixedcosts.html
+++ b/web/frontend/views/forecastfixedcosts.html
@@ -143,7 +143,7 @@
                         <input class="form-control" type="number" id="period" readonly name="period" /><br />
                         <label for="region">REGION:</label>
                         <input class="form-control" type="text" id="region" readonly name="region" /><br />
-                        <label for="currency">CURRENCY</label>
+                        <label for="currency">CURRENCY:</label>
                         <input class="form-control" type="text" id="currency" readonly name="currency" /><br />
                         <label for="userid">USERID:</label>
                         <input class="form-control" type="text" id="userid" readonly name="user_id"/><br />
@@ -206,6 +206,9 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                             <button type="submit" value="Submit" class="btn btn-success" >Save changes</button>
+                            <button id="deletebutton" type="button" class="btn btn-default">
+                                <span class="glyphicon glyphicon-trash" ></span> Delete
+                            </button>
                         </div>
                     </form>
                 </div>
